# python_arch_patterns

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  model.py  orm.py  pyproject.toml  repository.py  test_allocate.py  test_model.py  test_orm.py  test_repository.py
src/: setup.py
src/allocation/: bootstrap.py  config.py  views.py
src/allocation/adapters/: notifications.py  orm.py  redis_event_publisher.py  repository.py
src/allocation/domain/: model.py
src/allocation/entrypoints/: flask_app.py  redis_event_consumer.py
src/allocation/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: api_client.py  redis_client.py  test_api.py  test_external_events.py
tests/integration/: test_email.py  test_orm.py  test_repository.py  test_repostitory.py  test_uow.py  test_views.py
tests/unit/: test_allocate.py  test_handlers.py  test_model.py  test_product.py  test_services.py
