[tool.poetry]
name = "python-arch-patterns"
version = "0.1.0"
description = ""
authors = ["ihoochie"]
license = "Creative Commons CC-By-ND"
readme = "README.md"
packages = [{include = "python_arch_patterns"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.0"
requests = "^2.28.2"
flask = "^2.2.2"
psycopg2-binary = "^2.9.5"
tenacity = "^8.2.1"
redis = "^4.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "mypy-pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy-sqlalchemy.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
include = '\.pyi?$'
